Styling News Blog page: - added more spacing around the posts - sidebar dynamically changes depending on width - still gotta fix news on the home-page and footer

--- a/sass/base/elements/_tables.scss
+++ b/sass/base/elements/_tables.scss
@@ -9,7 +9,7 @@ table {
 		border-left: 1px solid #000;
 	}
 	
-	thead tr {
+	thead th {
 		background-color: $color__background-nav;
 		color: $color__text-main-dark-bg;
 	}
