--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -21,3 +21,8 @@
 	clear: both;
 	margin: 0 0 1.5em;
 }
+
+//News Posts
+.post {
+	padding: 1rem 2rem 4rem;
+}
